--- a/composer.json
+++ b/composer.json
@@ -102,6 +102,7 @@
         }
     },
     "require-dev": {
+        "fzaninotto/faker": "^1.5",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.1.*",
         "symfony/css-selector": "6.1.*",
