Add configurable email from

--- a/.env
+++ b/.env
@@ -14,6 +14,10 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
+###> Custom configuration ###
+APP_FROM_EMAIL=ca.parents.d.eleves.dimitile@gmail.com
+###< Custom configuration ###
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=5091675e3c72d2ab816dea22f7f4708f
