--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,5 +23,11 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+    App\Subscriber\UserSubscriber:
+        autoconfigure: true
+        autowire: true
+        arguments:
+            $from: '%env(resolve:APP_FROM_EMAIL)%'
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
