--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@
 
 ###> Custom configuration ###
 APP_FROM_EMAIL=ca.parents.d.eleves.dimitile@gmail.com
+APP_ROLE_PRIORITIES='{"ROLE_USER":100,"ROLE_CAN_SHOW_ARTICLE":3,"ROLE_CAN_CREATE_ARTICLE":3,"ROLE_CAN_UPDATE_ARTICLE":3,"ROLE_CAN_DELETE_ARTICLE":3,"ROLE_ARTICLE":2,"ROLE_CAN_SHOW_EVENT":3,"ROLE_CAN_CREATE_EVENT":3,"ROLE_CAN_UPDATE_EVENT":3,"ROLE_CAN_DELETE_EVENT":3,"ROLE_EVENT":2,"ROLE_CAN_SHOW_USER":3,"ROLE_CAN_CREATE_USER":3,"ROLE_CAN_UPDATE_USER":3,"ROLE_CAN_DELETE_USER":3,"ROLE_USER_MANAGER":2,"ROLE_ADMIN":1,"ROLE_SUPER_ADMIN":0}'
 ###< Custom configuration ###
 
 ###> symfony/framework-bundle ###
@@ -29,7 +30,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+# IMPORTANT":You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
