--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> Custom configuration ###
-APP_FROM_EMAIL=ca.parents.d.eleves.dimitile@gmail.com
+APP_FROM_EMAIL=parents.eleves.dimitile@gmail.com
 APP_ROLE_PRIORITIES='{"ROLE_USER":100,"ROLE_CAN_SHOW_ARTICLE":3,"ROLE_CAN_CREATE_ARTICLE":3,"ROLE_CAN_UPDATE_ARTICLE":3,"ROLE_CAN_DELETE_ARTICLE":3,"ROLE_ARTICLE":2,"ROLE_CAN_SHOW_EVENT":3,"ROLE_CAN_CREATE_EVENT":3,"ROLE_CAN_UPDATE_EVENT":3,"ROLE_CAN_DELETE_EVENT":3,"ROLE_EVENT":2,"ROLE_CAN_SHOW_USER":3,"ROLE_CAN_CREATE_USER":3,"ROLE_CAN_UPDATE_USER":3,"ROLE_CAN_DELETE_USER":3,"ROLE_USER_MANAGER":2,"ROLE_ADMIN":1,"ROLE_SUPER_ADMIN":0}'
 ###< Custom configuration ###
 
